--- a/readme
+++ b/readme
@@ -1,1 +1,1 @@
-A function that asks the user for a string and prints out whether this string is a palindrome or not. 
+A function, created in Python, that asks the user for a string and prints out whether this string is a palindrome or not. 
